; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_deadman.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zio.c_zio_deadman.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@zfs_deadman_enabled = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"%s waiting for hung I/O to pool '%s'\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"%s restarting hung I/O for pool '%s'\00", align 1
@.str.2 = private unnamed_addr constant [40 x i8] c"%s determined I/O to pool '%s' is hung.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zio_deadman(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i8* @spa_name(i32* %10)
  store i8* %11, i8** %6, align 8
  %12 = load i32, i32* @zfs_deadman_enabled, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @spa_suspended(i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14, %2
  br label %36

19:                                               ; preds = %14
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = call i32 @zio_deadman_impl(%struct.TYPE_4__* %20, i32 0)
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @spa_get_deadman_failmode(i32* %22)
  switch i32 %23, label %36 [
    i32 128, label %24
    i32 130, label %28
    i32 129, label %32
  ]

24:                                               ; preds = %19
  %25 = load i8*, i8** %4, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @zfs_dbgmsg(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8* %25, i8* %26)
  br label %36

28:                                               ; preds = %19
  %29 = load i8*, i8** %4, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = call i32 @zfs_dbgmsg(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %29, i8* %30)
  br label %36

32:                                               ; preds = %19
  %33 = load i8*, i8** %4, align 8
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @fm_panic(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0), i8* %33, i8* %34)
  br label %36

36:                                               ; preds = %18, %19, %32, %28, %24
  ret void
}

declare dso_local i8* @spa_name(i32*) #1

declare dso_local i64 @spa_suspended(i32*) #1

declare dso_local i32 @zio_deadman_impl(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @spa_get_deadman_failmode(i32*) #1

declare dso_local i32 @zfs_dbgmsg(i8*, i8*, i8*) #1

declare dso_local i32 @fm_panic(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
